Fixes two menu issues
* A small gap at the top of the menu when the non-mobile admin bar was present
* Incorrect font face on the back button

--- a/themes/greatermedia/assets/css/sass/layout/_menus.scss
+++ b/themes/greatermedia/assets/css/sass/layout/_menus.scss
@@ -73,9 +73,16 @@
 	}
 }
 
+
 .admin-bar .mobile-nav {
-	top: 46px;
-	height: calc( 100% - 46px ); /* doesn't work in IE8, but probably ok. Just don't edit the site and expect the front-end to be bug-free in IE8 */
+	top: 32px;
+	height: calc( 100% - 32px ); /* doesn't work in IE8, but probably ok. Just don't edit the site and expect the front-end to be bug-free in IE8 */
+
+	/* Matches, exactly, the media query for the admin bar, so when it changes height, the menu also does */
+	@media screen and (max-width: 782px) {
+		top: 46px;
+		height: calc(100% - 46px); /* doesn't work in IE8, but probably ok. Just don't edit the site and expect the front-end to be bug-free in IE8 */
+	}
 }
 
 .mobile-nav--open {
